# cidr-listings

./: .editorconfig  .gitignore  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  env-example  pyproject.toml  run-app-prod.sh  run-postgres-prod.sh
.github/workflows/: build.yml
requirements/: requirements-dev.txt  requirements.txt
src/app/: main.py  worker.py
src/app/domain/: __init__.py
src/app/domain/auth/: controllers.py  jwt.py  middleware.py  schemas.py  services.py
src/app/domain/cidr/: controllers.py  schemas.py  services.py
src/app/domain/lists/: controllers.py  schemas.py  services.py
src/app/domain/web/: controllers.py
src/app/domain/web/statics/static/css/: log-in.css  shared.css
src/app/domain/web/statics/static/js/: error.js
src/app/domain/web/templates/: base.html.j2  login.html.j2
src/app/domain/web/templates/partials/: cidr-detail.html.j2  list-cidrs.html.j2  list-edit.html.j2  list-item.html.j2  lists.html.j2  network-info.html.j2
src/app/domain/web/templates/partials/cidrs/: cidrs-job.html.j2  cidrs-parsed.html.j2  cidrs.html.j2
src/app/lib/: authcrypt.py  cli.py  default_admin_user.py  default_factories.py  exceptions.py  iputils.py  openapi.py  scheduled_tasks.py  settings.py  validations.py  worker.py
src/app/lib/db/: README.md  base.py  migrations.py
src/app/lib/db/migrations/: 00_create_tables.sql  01_triggers.sql  02_job_queue.sql
tests/: conftest.py  test_auth.py  test_cidr_filters.py  test_cidr_job.py  test_cidr_ttl.py  test_list.py
