[project]
name = "cidr-listing"
version = "1.0.0"
description = "Asynchrounous API for storing and retrieving lists of IP addresses"
authors = [ { name = "Manuel Sanchez Pinar", email =  "aomanu@gmail.com" } ]
license = "MIT"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "argon2-cffi",
    "asyncpg",
    "litestar[standard]",
    "msgspec",
    "pydantic",
    "pydantic-settings",
    "python-jose",
]

[project.optional-dependencies]
dev = [
    "asyncpg-stubs",
    "httpx",
    "ipython",
    "pytest",
    "pytest-asyncio",
    "pytest-xdist",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = "src"
asyncio_mode = "auto"

[tool.black]
profile = "black"
line-length = 120
target-version = ['py37'] # 'py38'
include = '\.pyi?$' # ^(?!urls).*\.pyi?$
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.ruff]
src = ["src"]
# https://beta.ruff.rs/docs/configuration/#using-pyprojecttoml
target-version = "py310"
line-length = 120
select = [
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "BLE", # flake8-blind-except
    "C4", # flake8-comprehensions
    "C90", # mccabe
    "D", # pydocstyle
    "DJ", # flake8-django
    "DTZ", # flake8-datetimez
    "E", # pycodestyle errors
    "ERA", # eradicate
    "EXE", # flake8-executable
    "F", # pyflakes
    "G", # flake8-logging-format
    "I", # isort
    "ICN", # flake8-import-conventions
    "ISC", # flake8-implicit-str-concat
    "N", # pep8-naming
    "PIE", # flake8-pie
    "PLC", # pylint - convention
    "PLE", # pylint - error
    "PLW", # pylint - warning
    "PTH", # flake8-use-pathlib
    "Q", # flake8-quotes
    "RET", # flake8-return
    "RUF", # Ruff-specific rules
    "S", # flake8-bandit
    "SIM", # flake8-simplify
    "T10", # flake8-debugger
    "T20", # flake8-print
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "UP", # pyupgrade
    "W", # pycodestyle - warning
    "YTT", # flake8-2020
]
ignore = [
    "E501", # line too long
    "D100", # docstring module
    "D101", # docstring
    "RUF012", # mutable class attributes
    "A002", # argument "id" shadowing ...
]
[tool.ruff.per-file-ignores]
"tests/**/*.*" = [
    "S",
    "D",
    "T201", # use of print
]
